@@ -1328,10 +1328,7 @@ libdbix-fulltextsearch-perl 0.73-10</screen>
 	    This option can be used to force the use of the full
 	    resolver even when <link
 	    linkend='configAlways-Use-Safe-Resolver'><literal>Aptitude::Always-Use-Safe-Resolver</literal></link>
-	    is true.  The <link
-	    linkend='manpageSafeUpgrade'><literal>safe-upgrade</literal></link>
-	    command never uses the full resolver and does not accept
-	    the <literal>--full-resolver</literal> option.
+	    is true.
 	  </para>
 	</listitem>
       </varlistentry>
