@@ -79,6 +79,12 @@ Version 0.7.4 UNRELEASED
 
   * Remove two uses of boost::lexical_cast, use std::to_string() instead
 
+- Documentation:
+
+  * manpage:
+
+    * Remove wrong assertion that safe-upgrade does not accept --full-resolver
+      (Closes: #560991)
 
 [2015-10-07]
 Version 0.7.3
